--- a/src/index.css
+++ b/src/index.css
@@ -19,13 +19,31 @@ a {
   color: var(--secondary);
 }
 
+.bg-primary {
+  background-color: var(--primary);
+}
+
+.navbar {
+  padding: .5rem 1.5rem;
+  background-color: var(--primary);
+  margin-inline: auto;
+  width: fit-content;
+  border-radius: 50px;
+  gap: 8rem;
+}
+
 .nav-link-list {
   list-style: none;
+}
+
+.nav-link-item {
+  padding: .5rem;
 }
 
 .nav-link {
   transition: ease-in-out .5s;
   position: relative;
+  color: var(--light);
 
   &:hover:after {
     width: 100%;
@@ -40,6 +58,6 @@ a {
     left: 0;
     bottom: 0;
     width: 0;
-    background-color: var(--primary);
+    background-color: var(--light);
     transition: width .5s;
   }
